# sigil-hermes

./: .gitignore  LICENSE  README.md  llms.txt  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
src/hermes_plugin_sigil/: __init__.py  _client.py  _config.py  _hooks.py  _otel.py  _redact.py  _state.py
tests/: conftest.py  test_hooks.py  test_otel_autosetup.py  test_redact.py  test_register.py
